[workspace]
resolver = "2"
members = [
    "slack-volt",
    "slack-volt-lambda",
    "examples/hello_command",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rajbot/slack-volt-rs"
authors = ["Raj Kumar <raj@bitstream.io>"]

[workspace.dependencies]
slack-volt = { path = "slack-volt" }
slack-volt-lambda = { path = "slack-volt-lambda" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
wiremock = "0.6"
lambda_http = "0.13"
lambda_runtime = "0.13"
