[package]
name = "slack-volt"
description = "A Bolt-style framework for building Slack apps in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
serde_urlencoded.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
